--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -283,19 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ffe50de2",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6538ba06",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# could run a lasso regression to see which variables are most predictive of the outcome??"
+   ]
   }
  ],
  "metadata": {
