--- a/notebooks/initial processing + lasso.ipynb
+++ b/notebooks/initial processing + lasso.ipynb
@@ -29650,6 +29650,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "081ad9b4",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e1e37255",
    "metadata": {},
    "source": [
@@ -29671,6 +29680,7 @@
     "\n",
     "Variables I could consider deleting from my refined variable list:\n",
     "- Job industry (not present here, and will be annoying due to lots of dummies)\n",
+    "- 'Health' is very strongly correlated with jbstat_8 (LT sick or disabled). But, loads of people have a long term physical or mental health condition (health==1) but are retired, or student, other jbstat category, meaning that they would not be captured in jbstat_8. So I will keep health in the model\n",
     "\n",
     "Noteworthy variables:\n",
     "- sclfsat* variables (e.g. satisfaction with life, health, income) are strong predictors of wellbeing. But they are effecitvely alternative wellbeing outcomes. If we include them, we risk circularity (i.e. we are predicting wellbeing with other measures of wellbeing). So I will exclude them\n",
@@ -29703,12 +29713,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "081ad9b4",
+   "id": "1aca67d8",
    "metadata": {},
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
